<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <!-- Jenkins plugin parent that supports Java 21&25 -->
    <parent>
        <groupId>org.jenkins-ci.plugins</groupId>
        <artifactId>plugin</artifactId>
        <version>6.2128.v999f813cd6c3</version>
        <relativePath/>
    </parent>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.jenkins.tools.bom</groupId>
                <artifactId>bom-weekly</artifactId>
                <version>5639.v2b_974a_e901e8</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.jenkins-ci.main</groupId>
                <artifactId>maven-plugin</artifactId>
                <version>3.27</version>
            </dependency>
            <dependency>
              <groupId>org.apache.logging.log4j</groupId>
              <artifactId>log4j-api</artifactId>
              <version>2.25.3</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <groupId>org.jenkins-ci.plugins</groupId>
    <artifactId>vectorcast-execution</artifactId>
    <version>0.79-SNAPSHOT</version>
    <packaging>hpi</packaging>

    <name>VectorCAST Execution Plugin</name>
    <url>https://github.com/vector/vectorcast-execution-plugin</url>

    <!-- Minimum Jenkins core -->
    <properties>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <findbugs.failOnError>false</findbugs.failOnError>
        <jenkins.version>2.541</jenkins.version>
        <changelist>-SNAPSHOT</changelist>
        <lintCompilerArgs>-Xlint:-options</lintCompilerArgs>
    </properties>
    <organization>
        <name>Vector Informatik, GmbH</name>
        <url>https://www.vector.com/</url>
    </organization>
    <developers>
        <developer>
            <id>TimSVector</id>
            <name>Tim Schneider</name>
            <email>Tim.Schneider@vector.com</email>
            <organization>Vector Informatik, GmbH</organization>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:https://github.com/jenkinsci/vectorcast-execution-plugin.git</connection>
        <developerConnection>scm:git:https://github.com/jenkinsci/vectorcast-execution-plugin.git</developerConnection>
        <url>https://github.com/jenkinsci/vectorcast-execution-plugin</url>
        <tag>HEAD</tag>
    </scm>
    <repositories>
        <repository>
            <id>repo.jenkins-ci.org</id>
            <url>https://repo.jenkins-ci.org/public/</url>
        </repository>
        <repository>
            <id>incremental.jenkins-ci.org</id>
            <url>https://repo.jenkins-ci.org/incrementals/</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>repo.jenkins-ci.org</id>
            <url>https://repo.jenkins-ci.org/public/</url>
        </pluginRepository>
       <pluginRepository>
           <id>incremental.jenkins-ci.org</id>
           <url>https://repo.jenkins-ci.org/incrementals/</url>
       </pluginRepository>
    </pluginRepositories>



    <dependencies>
        <!-- JUnit 5 (Jupiter) -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Your coverage plugin -->
        <dependency>
            <groupId>org.jenkins-ci.plugins</groupId>
            <artifactId>vectorcast-coverage</artifactId>
            <version>0.23-SNAPSHOT</version>
        </dependency>

        <!-- Jenkins plugins - versions provided by BOM -->
        <dependency>
            <groupId>io.jenkins.plugins</groupId>
            <artifactId>warnings-ng</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>com.sun.xml.bind</groupId>
                    <artifactId>jaxb-impl</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>javax.xml.bind</groupId>
                    <artifactId>jaxb-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>javax.activation</groupId>
                    <artifactId>activation</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>io.jenkins.plugins</groupId>
            <artifactId>coverage</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jvnet.hudson.plugins</groupId>
            <artifactId>groovy-postbuild</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jenkins-ci.plugins</groupId>
            <artifactId>copyartifact</artifactId>
        </dependency>

        <dependency>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-annotations</artifactId>
            <version>4.9.8</version>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jenkins-ci.plugins</groupId>
            <artifactId>credentials-binding</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jenkins-ci.plugins</groupId>
            <artifactId>ws-cleanup</artifactId>
        </dependency>

        <!-- Pipeline components -->
        <dependency>
            <groupId>org.jenkins-ci.plugins.workflow</groupId>
            <artifactId>workflow-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jenkins-ci.plugins.workflow</groupId>
            <artifactId>workflow-job</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jenkins-ci.plugins.workflow</groupId>
            <artifactId>workflow-step-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jenkins-ci.plugins.workflow</groupId>
            <artifactId>workflow-basic-steps</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jenkins-ci.plugins.workflow</groupId>
            <artifactId>workflow-durable-task-step</artifactId>
        </dependency>



        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.23.0</version>
            <scope>test</scope>
        </dependency>

        <!-- Declarative pipeline -->
        <dependency>
            <groupId>org.jenkinsci.plugins</groupId>
            <artifactId>pipeline-model-definition</artifactId>
          <scope>compile</scope>
        </dependency>

        <!-- For folder jobs -->
        <dependency>
            <groupId>org.jenkins-ci.plugins</groupId>
            <artifactId>cloudbees-folder</artifactId>
        </dependency>
        <dependency>
          <groupId>org.jenkins-ci</groupId>
          <artifactId>test-annotations</artifactId>
          <version>124.vd3dd48ed21ee</version>
          <scope>test</scope>
          <exclusions>
            <exclusion>
              <groupId>org.junit.vintage</groupId>
              <artifactId>junit-vintage-engine</artifactId>
            </exclusion>
          </exclusions>
        </dependency>

    </dependencies>

    <profiles>
        <profile>
            <id>lint</id>
            <properties>
                <lintCompilerArgs>-Xlint:all,-processing</lintCompilerArgs>
            </properties>
        </profile>
        <profile>
            <id>jacoco</id>
            <build>
              <plugins>
                <plugin>
                  <groupId>org.jacoco</groupId>
                  <artifactId>jacoco-maven-plugin</artifactId>
                  <version>0.8.14</version>
                  <configuration>
                    <propertyName>jacocoArgLine</propertyName>
                    <destFile>${project.build.directory}/jacoco.exec</destFile>
                  </configuration>
                  <executions>
                    <execution>
                      <goals><goal>prepare-agent</goal></goals>
                    </execution>
                    <execution>
                      <id>report</id>
                      <phase>verify</phase>
                      <goals><goal>report</goal></goals>
                    </execution>
                  </executions>
                </plugin>
              </plugins>
            </build>
        </profile>
    </profiles>
    <build>
      <resources>
        <resource>
          <directory>src/main/resources</directory>
        </resource>
      </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.6.0</version>

                <configuration>
                    <configLocation>${project.basedir}/checkstyle.xml</configLocation>
                </configuration>
            </plugin>

            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-jxr-plugin</artifactId>
              <version>3.6.0</version>
              <executions>
                <execution>
                  <id>jxr</id>
                  <phase>site</phase>
                  <goals>
                    <goal>jxr</goal>
                    <goal>test-jxr</goal>
                  </goals>
                </execution>
              </executions>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>
                        <arg>${lintCompilerArgs}</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-plugin</artifactId>
              <version>3.5.4</version>
              <configuration>
                <argLine>
                  @{jacocoArgLine}
                  @{jenkins.addOpens}
                  @{jenkins.insaneHook}
                  --enable-native-access=ALL-UNNAMED
                  --add-opens java.base/java.lang=ALL-UNNAMED
                  --add-opens java.base/java.util=ALL-UNNAMED
                </argLine>
                <excludeJUnit5Engines>junit-vintage</excludeJUnit5Engines>
                <forkCount>1C</forkCount> <!-- 1 JVM per CPU core -->
                <reuseForks>true</reuseForks>
                <perCoreThreadCount>true</perCoreThreadCount>
                <useUnlimitedThreads>true</useUnlimitedThreads>
              </configuration>
            </plugin>

            <plugin>
                <groupId>org.jenkins-ci.tools</groupId>
                <artifactId>maven-hpi-plugin</artifactId>
                <version>3.1816.v6ed1e566d656</version>
                <extensions>true</extensions>
            </plugin>

        </plugins>
    </build>
</project>
